[package]
name = "board-monitor-4chan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "4chan-board-monitor"
path = "src/main.rs"


[dependencies]
html-escape = "0.2.13"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

